RESOLVED FIXED 39939
Fix LayoutTests/fast/parser/xml-declaration-missing-ending-mark.html in HTML5 parser
https://bugs.webkit.org/show_bug.cgi?id=39939
Summary Fix LayoutTests/fast/parser/xml-declaration-missing-ending-mark.html in HTML5...
Adam Barth
Reported 2010-05-30 22:03:06 PDT
Fix LayoutTests/fast/parser/xml-declaration-missing-ending-mark.html in HTML5 parser
Attachments
Patch (3.86 KB, patch)
2010-05-30 22:04 PDT, Adam Barth
no flags
Adam Barth
Comment 1 2010-05-30 22:04:01 PDT
Adam Barth
Comment 2 2010-05-30 22:36:11 PDT
Comment on attachment 57432 [details] Patch Thank you much.
WebKit Commit Bot
Comment 3 2010-05-30 23:24:57 PDT
Comment on attachment 57432 [details] Patch Clearing flags on attachment: 57432 Committed r60430: <http://trac.webkit.org/changeset/60430>
WebKit Commit Bot
Comment 4 2010-05-30 23:25:02 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.