2010-05-30  Adam Barth  <abarth@webkit.org>

Reviewed by Darin Adler.

        Fix LayoutTests/fast/parser/xml-declaration-missing-ending-mark.html in HTML5 parser
        https://bugs.webkit.org/show_bug.cgi?id=39939

        Add some tests for the bogus comment state.

        * html5lib/resources/comments01.dat:
        * html5lib/runner-expected.txt:
2010-05-30  Adam Barth  <abarth@webkit.org>

        Reviewed by Darin Adler.

        Fix LayoutTests/fast/parser/xml-declaration-missing-ending-mark.html in HTML5 parser
        https://bugs.webkit.org/show_bug.cgi?id=39939

        Turns out we need to implement the bogus comment state.  :)

        * html/HTML5Lexer.cpp:
        (WebCore::HTML5Lexer::nextToken):

Canonical link: https://commits.webkit.org/51469@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60430 268f45cc-cd09-0410-ab3c-d52691b4dbfc